--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
           <div class="subheading mb-5">
             <a href="mailto:nick@nfreitas.com">nick@nfreitas.com</a>
           </div>
-          <p class="lead mb-5">Fullstack Web Developer</p>
+          <p class="lead mb-5">
+            Software Engineer. I recently started a
+            <a href="https://nick-freitas.github.io/">blog</a> to go into
+            personal projects, check it out.
+          </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/nickolasfreitas/"
               ><i class="svg-icon linkedin"></i
@@ -119,14 +123,14 @@
               ><i class="svg-icon github"></i
             ></a>
             <a href="https://nick-freitas.github.io/"
-              ><i class="svg-icon rss"></i
+              ><i class="svg-icon blogger"></i
             ></a>
             <a href="https://twitch.tv/codingtimewithnick"
               ><i class="svg-icon twitch"></i
             ></a>
-            <a href="https://youtube.com/channel/UCQ8hD_FPnQGaQaysm6jaHNA"
+            <!-- <a href="https://youtube.com/channel/UCQ8hD_FPnQGaQaysm6jaHNA"
               ><i class="svg-icon youtube"></i
-            ></a>
+            ></a> -->
             <a href="https://www.twitter.com/coding_nick"
               ><i class="svg-icon twitter"></i
             ></a>
@@ -285,9 +289,9 @@
               <h3 class="mb-0">Nubia Gamebooks</h3>
               <span class="subheading">Full Stack</span>
               <span class="subheading">Angular/Nest/Nx/Postgres/Prisma</span>
-              <a href="http://vampnotebook.com/"
+              <!-- <a href="http://vampnotebook.com/"
                 >Application Site (Hosted on AWS)</a
-              >
+              > -->
               <a href="https://github.com/nick-freitas/nubia"
                 >Source Code (Github)</a
               >
@@ -307,13 +311,18 @@
               </p>
               <p>
                 This is a work in progress, being partly worked on on
-                <a href="https://www.twitch.tv/codingtimewithnick">stream</a>
-                with VODs available.
+                <a href="https://www.twitch.tv/codingtimewithnick">stream</a>. I
+                am currently on break from streaming, but will be making VODs
+                when I go back. Please visit the
+                <a href="https://nick-freitas.github.io/nubia-overview/"
+                  >Nubia Gamebooks Overview
+                </a>
+                blog post to learn more about this application.
               </p>
             </div>
           </div>
 
-          <div
+          <!-- <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1 d-flex flex-column">
@@ -342,7 +351,7 @@
                 service. This app is hosted on an AWS S3 bucket.
               </p>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -394,6 +403,13 @@
                 Bachelor of Science, Computer Science
               </div>
               <p>Honors: Cum Laude, Upsilon Pi Epsilon</p>
+              <p>
+                Awards: 1
+                <sup>st</sup>
+                Place - SSU Programming Contest (2015); 2
+                <sup>nd</sup>
+                Place - SSU Programming Contest (2014)
+              </p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">September 2013 - January 2017</span>
